--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
         <h1>Ohmyfood</h1>
         <ul>
             <li>
-                <div>
+                <div class="link-fas">
                     <i class="fas fa-utensils"></i>
                     <p><a href="#">proposer un restaurant</a></p>
                 </div>
             </li>
             <li>
-                <div>
+                <div class="link-fas">
                     <i class="fas fa-hands-helping"></i>
                     <p><a href="#">Devenir partenaire</a></p>
                 </div>
             </li>
             <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">contact</a></li>
+            <li><a href="#" id="contacte">contact</a></li>
             
         </ul>   
     </footer>
