--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
 <body>
                <!-- header -->
     <header>
-        <img src="images/logo/ohmyfood.png" alt="logo">
+        <img src="images/logo/ohmyfood@2x.svg" alt="logo">
     </header>
                 <!-- nav1 -->
     <nav>
-        <div>
+      <div id="menu">
+        <div class="menu1">
             <i class="fa fa-map-marker"></i>
             <h4>Paris, Belleville</h4>
         </div>
-        <div>
             <h2>Réservez le menu qui vous convient</h2>
-            <h3>Découvrez des restaurants d'exception, séléctionnés par nos soins.</h3>
-            <p><a href="#">Explorer nos restaurants</a></p>
-        </div>
+            <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+            <button>Explorer nos restaurants</button>
+      </div>
     </nav>
-               <!-- nav2 -->      
-    <nav>
+               <!-- main -->      
+    <main>
         <h1>Fonctionnement</h1>
         <div>
             <ol>
@@ -54,7 +54,7 @@
             
         </div>
 
-    </nav>
+    </main>
                <!-- section1 -->
     <section>
         <h1>restaurants</h1>
