--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
             <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-            <button>Explorer nos restaurants</button>
+            <a href="#">Explorer nos restaurants</a>
       </div>
     </nav>
                <!-- main -->      
