--- a/index.html
+++ b/index.html
@@ -30,29 +30,24 @@
                <!-- main -->      
     <main>
         <h1>Fonctionnement</h1>
-        <div>
-            <ol>
-                <li>
-                    <div>
+
+                    <div class="link">
+                        <span>1</span>
                         <i class="fas fa-mobile-alt"></i>
                         <h3> <a href="#">Coisissez un restaurant </a></h3>
                     </div>
-                </li>
-                <li> 
-                    <div>
-                        <i class="fas fa-ellipsis-v"></i>
-                        <i class="fas fa-bars"></i>
+  
+                    <div class="link">
+                        <span>2</span>
+                        <i class="fas fa-list-ul"></i>
                         <h3><a href="#">Composez votre menu </a></h3>
                     </div>
-                </li>
-                <li>
-                    <div>
+      
+                    <div class="link">
+                        <span>3</span>
+                        <i class="fas fa-store"></i>
                         <h3><a href="#">Dégustez au restaurant </a></h3>
                      </div>
-                </li>
-            </ol>
-            
-        </div>
 
     </main>
                <!-- section1 -->
