--- a/index.html
+++ b/index.html
@@ -52,17 +52,18 @@
     </main>
                <!-- section1 -->
     <section>
-        <h1>restaurants</h1>
-        <div>
-            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette du goût" width="200px" height="200px">
-            <div>
-              <h2>La palette du goût</h2>
-              <i class="far fa-heart"></i>
-            </div>
-            <span>Ménilmontant</span>
+       <h1>restaurants</h1>
+         <article class="menu-resto">
+                <a href="#"><img src="images/restaurants/gout.jpg">
+                   <h3>Nouveau</h3>
+                   <i class="far fa-heart"></i>
+                   <div class="plats">
+                      <h2>La palette du goût</h2>
+                      <span>Ménilmontant</span> 
+                   </div>
+                </a>
            
-        </div>
-
+         </article>
     </section>  
                    <!-- section2 --> 
     <section>
