--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 </main>
                <!-- section1 -->
 <section>
-       <h1>restaurants</h1>
+       <h2 id="bolde">Restaurants</h2>
          <article class="menu-resto">
-                <a href="#"><img src="images/restaurants/gout.jpg">
+                <a href="menu.html"><img src="images/restaurants/gout.jpg" alt="gout">
                    <h3>Nouveau</h3>
                    <i class="far fa-heart"></i>
                    <i class="fas fa-heart"></i>
@@ -66,7 +66,7 @@
             </article>
             <!-- article2 -->
             <article class="menu-resto">
-                <a href="#"><img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
+                <a href="menu1.html"><img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="enchante">
                    <h3>Nouveau</h3>
                    <i class="far fa-heart"></i>
                    <i class="fas fa-heart"></i>
@@ -79,7 +79,7 @@
          </article>
          <!-- article3 -->
          <article class="menu-resto">
-            <a href="#"><img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+            <a href="menu2.html"><img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="cite-rouge">
                 <h3 class="sans-nouveau">Nouveau</h3>
                 <i class="far fa-heart"></i>
                <i class="fas fa-heart"></i>
@@ -92,7 +92,7 @@
      </article>
           <!--article4-->
           <article class="menu-resto">
-            <a href="#"><img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+            <a href="menu3.html"><img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="sens">
                <h3 class="sans-nouveau">Nouveau</h3>
                <i class="far fa-heart"></i>
                <i class="fas fa-heart"></i>
