--- a/menu.html
+++ b/menu.html
@@ -12,12 +12,13 @@
 </head>
 <body>
              <!-- header -->
+    <a href="#" onclick="history.go(-1);"><i class="fas fa-arrow-left"></i></a>
     <header>
         <img src="images/logo/ohmyfood@2x.svg" alt="logo">
     </header>
           <!-- nav -->
     <nav>
-        <img src="images/restaurants/gout.jpg" alt="gout" height="200px" width="350px">
+        <img src="images/restaurants/gout.jpg" alt="gout" height="250px" width="350px">
     </nav>
     <section class="menu-food">
          <h1>La palette du goût</h1>
@@ -94,9 +95,10 @@
         </a>
       </div>
     </article>
+          <button class="btn">Commander</button>
     </section>
            <!-- footer -->
-    <footer>
+    <footer class="footers">
         <h1>Ohmyfood</h1>
         <ul>
             <li>
