--- a/menu.html
+++ b/menu.html
@@ -25,13 +25,17 @@
          <i class="far fa-heart"></i>
        <article>
            <h3>Entrées</h3>
-           <div class="link-food">
-            <a href="#">
-              <h2>Fricassée d'escargot</h2>
-              <p>Au piment d'Espelette</p>
-              <span>25€</span>
-            </a>
-           </div>
+          <div class="link-food">
+              <div>
+                <a href="#">
+                  <h2>Fricassée d'escargot</h2>
+                  <p>Au piment d'Espelette</p>
+                </a>
+              </div>
+              <div id="prix"><span>25€</span></div>
+              <div id="icon"><i class="fas fa-check-circle"></i></div>
+          </div>
+
            <div class="link-food">
             <a href="#">
               <h2>Foie gras de canard mi-cuit</h2>
