--- a/menu.html
+++ b/menu.html
@@ -25,78 +25,92 @@
          <i class="far fa-heart"></i>
        <article>
            <h3>Entrées</h3>
-          <div class="link-food">
+        <div class="link-food">
               <div>
-                <a href="#">
                   <h2>Fricassée d'escargot</h2>
                   <p>Au piment d'Espelette</p>
-                </a>
+                  <span id="prix">25€</span>
               </div>
-              <div id="prix"><span>25€</span></div>
-              <div id="icon"><i class="fas fa-check-circle"></i></div>
+              <div id="icon"><i class="fas fa-check-circle"></i>
+              </div>
+        </div>
+        <div class="link-food">
+            <div>
+                <h2>Foie gras de canard mi-cuit</h2>
+                <p>Et ses copeaux de truffe noire</p>
+                <span id="prix">35€</span>
+            </div>
+            <div id="icon"><i class="fas fa-check-circle"></i>
+            </div>
           </div>
-
-           <div class="link-food">
-            <a href="#">
-              <h2>Foie gras de canard mi-cuit</h2>
-              <p>Et ses copeaux de truffe noire</p>
-              <span>35€</span>
-            </a>
-         </div>
-         <div class="link-food">
-            <a href="#">
+        <div class="link-food">
+          <div>
               <h2>Oeuf au plat</h2>
               <p>Assaisonné à la truffe sur lit de caviar</p>
-              <span>20€</span>
-            </a>
-         </div>
+              <span id="prix">20€</span>
+          </div>
+          <div id="icon"><i class="fas fa-check-circle"></i>
+          </div>
+        </div>
        </article>
        <article>
         <h3>Plats</h3>
         <div class="link-food">
-          <a href="#">
-             <h2>Filet de boeuf aux herbes</h2>
-             <p>Accompagné de sa ribambelle de légumes</p>
-             <span>40€</span>
-          </a>
+          <div>
+              <h2>Filet de boeuf aux herbes</h2>
+              <p>Accompagné de sa ribambelle de légumes</p>
+              <span id="prix">40€</span>
+          </div>
+          <div id="icon"><i class="fas fa-check-circle"></i>
+          </div>
         </div>
         <div class="link-food">
-         <a href="#">
-           <h2>Parmentier de queue de boeuf</h2>
-           <p>À la truffe noire sur sa purée de panais</p>
-           <span>35€</span>
-         </a>
-      </div>
+          <div>
+              <h2>Parmentier de queue de boeuf</h2>
+              <p>À la truffe noire sur sa purée de panais</p>
+              <span id="prix">35€</span>
+          </div>
+          <div id="icon"><i class="fas fa-check-circle"></i>
+          </div>
+        </div>
       <div class="link-food">
-        <a href="#">
-           <h2>Filet de turbot</h2>
-           <p>Aux agrumes</p>
-           <span>44€</span>
-        </a>
+        <div>
+            <h2>Filet de turbot</h2>
+            <p>Aux agrumes</p>
+            <span id="prix">44€</span>
+        </div>
+        <div id="icon"><i class="fas fa-check-circle"></i>
+        </div>
       </div>
     </article>
     <article>
         <h3>Desserts</h3>
         <div class="link-food">
-         <a href="#">
-           <h2>Paris-Brest</h2>
-           <p>Revisité</p>
-           <span>18€</span>
-         </a>
+          <div>
+              <h2>Paris-Brest</h2>
+              <p>Revisité</p>
+              <span id="prix">18€</span>
+          </div>
+          <div id="icon"><i class="fas fa-check-circle"></i>
+          </div>
         </div>
         <div class="link-food">
-         <a href="#">
-            <h2>Macaron au chocolat d'exception</h2>
-            <p>Et glace à la vanille de Madagascar</p>
-            <span>22€</span>
-        </a>
-      </div>
+          <div>
+              <h2>Macaron au chocolat d'exception</h2>
+              <p>Et glace à la vanille de Madagascar</p>
+              <span id="prix">22€</span>
+          </div>
+          <div id="icon"><i class="fas fa-check-circle"></i>
+          </div>
+        </div>
       <div class="link-food">
-        <a href="#">
-         <h2>Mousse au chocolat </h2>
-         <p>Au piment d'Espelette et à la truffe noire</p>
-         <span>23€</span>
-        </a>
+        <div>
+            <h2>Mousse au chocolat</h2>
+            <p>Au piment d'Espelette et à la truffe noire</p>
+            <span id="prix">23€</span>
+        </div>
+        <div id="icon"><i class="fas fa-check-circle"></i>
+        </div>
       </div>
     </article>
           <button class="btn">Commander</button>
