--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,8 @@
 </head>
 <body>
              <!-- header -->
-    <a href="#" onclick="history.go(-1);"><i class="fas fa-arrow-left"></i></a>
+    <!--<a href="#" onclick="history.go(-1);"><i class="fas fa-arrow-left"></i></a>-->
+    <a href="index.html" class="retour"><i class="fas fa-arrow-left"></i></a>
     <header>
         <img src="images/logo/ohmyfood@2x.svg" alt="logo">
     </header>
