--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                <!-- main -->      
 <main>
         <h1>Fonctionnement</h1>
-
+            <div class="links">
                     <div class="link">
                         <span>1</span>
                         <i class="fas fa-mobile-alt"></i>
@@ -48,13 +48,14 @@
                         <i class="fas fa-store"></i>
                         <h3><a href="#">Dégustez au restaurant </a></h3>
                      </div>
+            </div>
 
 </main>
                <!-- section1 -->
 <section>
-       <h2 id="bolde">Restaurants</h2>
-         <article class="menu-resto">
- 
+    <h2 id="bolde">Restaurants</h2>
+        <div class="article">   
+            <article class="menu-resto">
                 <a href="menu.html">
                 <img src="images/restaurants/gout.jpg" alt="gout">
                 <h3>Nouveau</h3>
@@ -126,6 +127,7 @@
                </div>
             </div> 
         </article>
+    </div>     
 </section>  
                     <!-- footer -->
     <footer>
