--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <!-- article2 -->
 
             <article class="menu-resto">
-                <a href="menu.html">
+                <a href="menu1.html">
                 <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="enchante">
                 <h3>Nouveau</h3>
                 </a>
@@ -94,7 +94,7 @@
 
          <article class="menu-resto">
  
-            <a href="menu.html">
+            <a href="menu2.html">
             <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="cite-rouge">
             <h3>Nouveau</h3>
             </a>
@@ -112,7 +112,7 @@
           <!--article4-->
           <article class="menu-resto">
  
-            <a href="menu.html">
+            <a href="menu3.html">
             <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="sens">
             <h3>Nouveau</h3>
             </a>
