--- a/menu.html
+++ b/menu.html
@@ -19,102 +19,110 @@
     </header>
           <!-- nav -->
     <nav>
-        <img src="images/restaurants/gout.jpg" alt="gout" height="250px" width="350px">
+        <img src="images/restaurants/gout.jpg" alt="gout">
     </nav>
     <section class="menu-food">
-         <h1>La palette du goût</h1>
+         <h2>La palette du goût</h2>
          <i class="far fa-heart"></i>
        <article>
            <h3>Entrées</h3>
-        <div class="link-food">
+        <div>
+          <div class="link-food">
               <div>
                   <h2>Fricassée d'escargot</h2>
                   <p>Au piment d'Espelette</p>
-                  <span id="prix">25€</span>
+                  <span>25€</span>
               </div>
-              <div id="icon"><i class="fas fa-check-circle"></i>
+              <div><i class="fas fa-check-circle"></i>
               </div>
-        </div>
-        <div class="link-food">
+          </div>
+          <div class="link-food">
             <div>
                 <h2>Foie gras de canard mi-cuit</h2>
                 <p>Et ses copeaux de truffe noire</p>
-                <span id="prix">35€</span>
+                <span>35€</span>
             </div>
-            <div id="icon"><i class="fas fa-check-circle"></i>
+            <div><i class="fas fa-check-circle"></i>
             </div>
           </div>
-        <div class="link-food">
+          <div class="link-food">
           <div>
               <h2>Oeuf au plat</h2>
               <p>Assaisonné à la truffe sur lit de caviar</p>
-              <span id="prix">20€</span>
+              <span>20€</span>
           </div>
-          <div id="icon"><i class="fas fa-check-circle"></i>
+          <div><i class="fas fa-check-circle"></i>
           </div>
-        </div>
+          </div>
+      </div>
        </article>
        <article>
         <h3>Plats</h3>
-        <div class="link-food">
-          <div>
+        <div>
+          <div class="link-food">
+            <div>
               <h2>Filet de boeuf aux herbes</h2>
               <p>Accompagné de sa ribambelle de légumes</p>
-              <span id="prix">40€</span>
+              <span>40€</span>
+            </div>
+            <div><i class="fas fa-check-circle"></i>
+            </div>
           </div>
-          <div id="icon"><i class="fas fa-check-circle"></i>
-          </div>
-        </div>
-        <div class="link-food">
-          <div>
+          <div class="link-food">
+            <div>
               <h2>Parmentier de queue de boeuf</h2>
               <p>À la truffe noire sur sa purée de panais</p>
-              <span id="prix">35€</span>
+              <span>35€</span>
+            </div>
+            <div><i class="fas fa-check-circle"></i>
+            </div>
           </div>
-          <div id="icon"><i class="fas fa-check-circle"></i>
-          </div>
-        </div>
-      <div class="link-food">
-        <div>
+          <div class="link-food">
+            <div>
             <h2>Filet de turbot</h2>
             <p>Aux agrumes</p>
-            <span id="prix">44€</span>
-        </div>
-        <div id="icon"><i class="fas fa-check-circle"></i>
+            <span>44€</span>
+            </div>
+           <div><i class="fas fa-check-circle"></i>
+         </div>
         </div>
       </div>
     </article>
     <article>
         <h3>Desserts</h3>
+      <div>
         <div class="link-food">
           <div>
               <h2>Paris-Brest</h2>
               <p>Revisité</p>
-              <span id="prix">18€</span>
+              <span>18€</span>
           </div>
-          <div id="icon"><i class="fas fa-check-circle"></i>
+          <div><i class="fas fa-check-circle"></i>
           </div>
         </div>
         <div class="link-food">
           <div>
               <h2>Macaron au chocolat d'exception</h2>
               <p>Et glace à la vanille de Madagascar</p>
-              <span id="prix">22€</span>
+              <span>22€</span>
           </div>
-          <div id="icon"><i class="fas fa-check-circle"></i>
+          <div><i class="fas fa-check-circle"></i>
           </div>
         </div>
-      <div class="link-food">
-        <div>
+        <div class="link-food">
+          <div>
             <h2>Mousse au chocolat</h2>
             <p>Au piment d'Espelette et à la truffe noire</p>
-            <span id="prix">23€</span>
-        </div>
-        <div id="icon"><i class="fas fa-check-circle"></i>
+            <span>23€</span>
+          </div>
+          <div><i class="fas fa-check-circle"></i>
+          </div>
         </div>
       </div>
     </article>
-          <button class="btn">Commander</button>
+        <div class="btn">
+          <button>Commander</button>
+        </div>
     </section>
            <!-- footer -->
     <footer class="footers">
