--- a/menu1.html
+++ b/menu1.html
@@ -12,80 +12,129 @@
 </head>
 <body>
              <!-- header -->
+    <!--<a href="#" onclick="history.go(-1);"><i class="fas fa-arrow-left"></i></a>-->
+    <a href="index.html" class="retour"><i class="fas fa-arrow-left"></i></a>
     <header>
         <img src="images/logo/ohmyfood@2x.svg" alt="logo">
     </header>
           <!-- nav -->
     <nav>
-        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="enchante" height="200px" width="350px">
+        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="charone">
     </nav>
-    <section>
-       <div>
-         <i class="far fa-heart"></i>
+    <section class="menu-food">
          <h2>La note enchantée</h2>
-       </div>
+         <i class="far fa-heart"></i>
        <article>
-        <h3>Entrées</h3>
+           <h3>Entrées</h3>
         <div>
-           <h2>Ravioles de foie gras </h2>
-           <p>Accompagnés de leur crème à la truffe</p>
-           <span>25€</span>
+          <div class="link-food">
+              <div>
+                  <h2>Ravioles de foie gras</h2>
+                  <p>Accompagnés de leur crème à la truffe</p>
+                  <span>25€</span>
+              </div>
+              <div><i class="fas fa-check-circle"></i>
+              </div>
+          </div>
+          <div class="link-food">
+            <div>
+                <h2>Caviar osciètre</h2>
+                <p>Sur blini à la farine de blé noir</p>
+                <span>35€</span>
+            </div>
+            <div><i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+          <div class="link-food">
+          <div>
+              <h2>Homard et espuma de potiron</h2>
+              <p>Mariné aux zestes d'orange</p>
+              <span>20€</span>
+          </div>
+          <div><i class="fas fa-check-circle"></i>
+          </div>
+          </div>
+          <div class="link-food">
+            <div>
+                <h2>Foie gras de canard cuit entier</h2>
+                <p>Confiture de figue et pain toasté</p>
+                <span>35€</span>
+            </div>
+            <div><i class="fas fa-check-circle"></i>
+            </div>
+            </div>
+      </div>
+       </article>
+       <article>
+        <h3>Plats</h3>
+        <div>
+          <div class="link-food">
+            <div>
+              <h2>Noix de coquilles Saint-Jacques</h2>
+              <p>Sur lit de purée de céleri-rave</p>
+              <span>40€</span>
+            </div>
+            <div><i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+          <div class="link-food">
+            <div>
+              <h2>Langoustine poêlée</h2>
+              <p>Purée de patate douce</p>
+              <span>35€</span>
+            </div>
+            <div><i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+          <div class="link-food">
+            <div>
+            <h2>Mijoté de queue de boeuf </h2>
+            <p>Et riz sauvage aux zestes de citron</p>
+            <span>44€</span>
+            </div>
+           <div><i class="fas fa-check-circle"></i>
+         </div>
         </div>
-        <div>
-         <h2>Caviar osciètre </h2>
-         <p>Sur blini à la farine de blé noir</p>
-         <span>35€</span>
       </div>
-      <div>
-         <h2>Homard et espuma de potiron</h2>
-         <p>Mariné aux zestes d'orange</p>
-         <span>20€</span>
-      </div>
-      <div>
-        <h2>Foie gras de canard cuit entier</h2>
-        <p>Confiture de figue et pain toasté</p>
-        <span>20€</span>
-     </div>
     </article>
     <article>
-     <h3>Plats</h3>
-     <div>
-        <h2>Noix de coquilles Saint-Jacques</h2>
-        <p>Sur lit de purée de céleri-rave</p>
-        <span>40€</span>
-     </div>
-     <div>
-      <h2>Langoustine poêlée</h2>
-      <p>Purée de patate douce</p>
-      <span>35€</span>
-   </div>
-   <div>
-      <h2>Mijoté de queue de boeuf</h2>
-      <p>Et riz sauvage aux zestes de citron</p>
-      <span>44€</span>
-   </div>
- </article>
- <article>
-     <h3>Desserts</h3>
-     <div>
-        <h2>Macaron noisette et chocolat</h2>
-        <p>Glace au caramel brun et sel de Guérande</p>
-        <span>18€</span>
-     </div>
-     <div>
-      <h2>Baba au rhum revisité </h2>
-      <p>Avec son coulis de citron</p>
-      <span>22€</span>
-   </div>
-   <div>
-      <h2>Tarte au citron meringuée  </h2>
-      <p>Déstructurée</p>
-      <span>23€</span>
-   </div>
- </article>
+        <h3>Desserts</h3>
+      <div>
+        <div class="link-food">
+          <div>
+              <h2>Macaron noisette et chocolat</h2>
+              <p>Glace au caramel brun et sel de Guérande</p>
+              <span>18€</span>
+          </div>
+          <div><i class="fas fa-check-circle"></i>
+          </div>
+        </div>
+        <div class="link-food">
+          <div>
+              <h2>Baba au rhum revisité</h2>
+              <p>Avec son coulis de citron</p>
+              <span>22€</span>
+          </div>
+          <div><i class="fas fa-check-circle"></i>
+          </div>
+        </div>
+        <div class="link-food">
+          <div>
+            <h2>Tarte au citron meringuée</h2>
+            <p>Déstructurée</p>
+            <span>23€</span>
+          </div>
+          <div><i class="fas fa-check-circle"></i>
+          </div>
+        </div>
+      </div>
+    </article>
+        <div class="btn">
+          <button>Commander</button>
+        </div>
     </section>
            <!-- footer -->
-    <footer>
+    <footer class="footers">
         <h1>Ohmyfood</h1>
         <ul>
             <li>
