--- a/menu2.html
+++ b/menu2.html
@@ -12,75 +12,120 @@
 </head>
 <body>
              <!-- header -->
+    <!--<a href="#" onclick="history.go(-1);"><i class="fas fa-arrow-left"></i></a>-->
+    <a href="index.html" class="retour"><i class="fas fa-arrow-left"></i></a>
     <header>
         <img src="images/logo/ohmyfood@2x.svg" alt="logo">
     </header>
           <!-- nav -->
     <nav>
-        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="cite-rouge" height="200px" width="350px">
+        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="française">
     </nav>
-    <section>
-       <div>
+    <section class="menu-food">
+         <h2>À la française</h2>
          <i class="far fa-heart"></i>
-         <h2>A la française</h2>
-       </div>
        <article>
-        <h3>Entrées</h3>
+           <h3>Entrées</h3>
         <div>
-           <h2>Tartare de poulpe acidulé</h2>
-           <p>Aux zestes d'orange</p>
-           <span>25€</span>
-        </div>
-        <div>
-         <h2>Velouté de légumes d'antan</h2>
-         <p>Carotte, panais, topinambour</p>
-         <span>35€</span>
+          <div class="link-food">
+              <div>
+                  <h2>Tartare de poulpe acidulé</h2>
+                  <p>Aux zestes d'orange</p>
+                  <span>25€</span>
+              </div>
+              <div><i class="fas fa-check-circle"></i>
+              </div>
+          </div>
+          <div class="link-food">
+            <div>
+                <h2>Velouté de légumes d'antan</h2>
+                <p>Carotte, panais, topinambour</p>
+                <span>35€</span>
+            </div>
+            <div><i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+          <div class="link-food">
+          <div>
+              <h2>Soupe à l'oignon</h2>
+              <p>Revisitée</p>
+              <span>20€</span>
+          </div>
+          <div><i class="fas fa-check-circle"></i>
+          </div>
+          </div>
       </div>
-      <div>
-         <h2>Soupe à l'oignon</h2>
-         <p>Revisitée</p>
-         <span>20€</span>
+       </article>
+       <article>
+        <h3>Plats</h3>
+        <div>
+          <div class="link-food">
+            <div>
+              <h2>Coquilles Saint-Jacques</h2>
+              <p>Accompagnées d'une purée de panais</p>
+              <span>40€</span>
+            </div>
+            <div><i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+          <div class="link-food">
+            <div>
+              <h2>Magret de canard</h2>
+              <p>Et parmentier de pommes de terre</p>
+              <span>35€</span>
+            </div>
+            <div><i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+          <div class="link-food">
+            <div>
+            <h2>Pigeonneau d’Ille-et-Vilaine</h2>
+            <p>Sur son lit de gnocchis aux légumes</p>
+            <span>44€</span>
+            </div>
+           <div><i class="fas fa-check-circle"></i>
+         </div>
+        </div>
       </div>
     </article>
     <article>
-     <h3>Plats</h3>
-     <div>
-        <h2>Coquilles Saint-Jacques</h2>
-        <p>Accompagnées d'une purée de panais</p>
-        <span>40€</span>
-     </div>
-     <div>
-      <h2>Magret de canard</h2>
-      <p>Et parmentier de pommes de terre</p>
-      <span>35€</span>
-   </div>
-   <div>
-      <h2>Pigeonneau d’Ille-et-Vilaine</h2>
-      <p>Sur son lit de gnocchis aux légumes</p>
-      <span>44€</span>
-   </div>
- </article>
- <article>
-     <h3>Desserts</h3>
-     <div>
-        <h2>Pétales de violettes glacés</h2>
-        <p>Et purée de noisettes</p>
-        <span>18€</span>
-     </div>
-     <div>
-      <h2>Fondant au chocolat</h2>
-      <p>Revisité</p>
-      <span>22€</span>
-   </div>
-   <div>
-      <h2>Millefeuille croustillant</h2>
-      <p>Myrtilles et pâte d’amande</p>
-      <span>23€</span>
-   </div>
- </article>
+        <h3>Desserts</h3>
+      <div>
+        <div class="link-food">
+          <div>
+              <h2>Pétales de violettes glacés</h2>
+              <p>Et purée de noisettes</p>
+              <span>18€</span>
+          </div>
+          <div><i class="fas fa-check-circle"></i>
+          </div>
+        </div>
+        <div class="link-food">
+          <div>
+              <h2>Fondant au chocolat</h2>
+              <p>Revisité</p>
+              <span>22€</span>
+          </div>
+          <div><i class="fas fa-check-circle"></i>
+          </div>
+        </div>
+        <div class="link-food">
+          <div>
+            <h2>Millefeuille croustillant</h2>
+            <p>Myrtilles et pâte d’amande</p>
+            <span>23€</span>
+          </div>
+          <div><i class="fas fa-check-circle"></i>
+          </div>
+        </div>
+      </div>
+    </article>
+        <div class="btn">
+          <button>Commander</button>
+        </div>
     </section>
            <!-- footer -->
-    <footer>
+    <footer class="footers">
         <h1>Ohmyfood</h1>
         <ul>
             <li>
