--- a/menu3.html
+++ b/menu3.html
@@ -12,75 +12,120 @@
 </head>
 <body>
              <!-- header -->
+    <!--<a href="#" onclick="history.go(-1);"><i class="fas fa-arrow-left"></i></a>-->
+    <a href="index.html" class="retour"><i class="fas fa-arrow-left"></i></a>
     <header>
         <img src="images/logo/ohmyfood@2x.svg" alt="logo">
     </header>
           <!-- nav -->
     <nav>
-        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="sens" height="200px" width="350px">
+        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="sens">
     </nav>
-    <section>
-       <div>
-         <i class="far fa-heart"></i>
+    <section class="menu-food">
          <h2>Le délice des sens</h2>
-       </div>
+         <i class="far fa-heart"></i>
        <article>
-        <h3>Entrées</h3>
+           <h3>Entrées</h3>
         <div>
-           <h2>Tartare de thon</h2>
-           <p>Assaisonné au yuzu</p>
-           <span>25€</span>
-        </div>
-        <div>
-         <h2>Bouchée de homard croustillant</h2>
-         <p>Et sa farandole de petits légumes</p>
-         <span>35€</span>
+          <div class="link-food">
+              <div>
+                  <h2>Tartare de thon</h2>
+                  <p>Assaisonné au yuzu</p>
+                  <span>25€</span>
+              </div>
+              <div><i class="fas fa-check-circle"></i>
+              </div>
+          </div>
+          <div class="link-food">
+            <div>
+                <h2>Bouchée de homard croustillant</h2>
+                <p>Et sa farandole de petits légumes</p>
+                <span>35€</span>
+            </div>
+            <div><i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+          <div class="link-food">
+          <div>
+              <h2>Velouté de cèpes</h2>
+              <p>Aux truffes</p>
+              <span>20€</span>
+          </div>
+          <div><i class="fas fa-check-circle"></i>
+          </div>
+          </div>
       </div>
-      <div>
-         <h2>Velouté de cèpes</h2>
-         <p>Aux truffes</p>
-         <span>20€</span>
+       </article>
+       <article>
+        <h3>Plats</h3>
+        <div>
+          <div class="link-food">
+            <div>
+              <h2>Poulet rôti aux herbes de Provence</h2>
+              <p>Et sa crème de truffe</p>
+              <span>40€</span>
+            </div>
+            <div><i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+          <div class="link-food">
+            <div>
+              <h2>Langouste rôtie</h2>
+              <p>Et ses légumes de saison</p>
+              <span>35€</span>
+            </div>
+            <div><i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+          <div class="link-food">
+            <div>
+            <h2>Côte de boeuf Angus</h2>
+            <p>Et sa purée de panais</p>
+            <span>44€</span>
+            </div>
+           <div><i class="fas fa-check-circle"></i>
+         </div>
+        </div>
       </div>
     </article>
     <article>
-     <h3>Plats</h3>
-     <div>
-        <h2>Poulet rôti aux herbes de Provence</h2>
-        <p>Et sa crème de truffe</p>
-        <span>40€</span>
-     </div>
-     <div>
-      <h2>Langouste rôtie</h2>
-      <p>Et ses légumes de saison</p>
-      <span>35€</span>
-   </div>
-   <div>
-      <h2>Côte de boeuf Angus</h2>
-      <p>Et sa purée de panais</p>
-      <span>44€</span>
-   </div>
- </article>
- <article>
-     <h3>Desserts</h3>
-     <div>
-        <h2>Farandole de desserts</h2>
-        <p>Du chef</p>
-        <span>18€</span>
-     </div>
-     <div>
-      <h2>Crème brulée</h2>
-      <p>Revisitée</p>
-      <span>22€</span>
-   </div>
-   <div>
-      <h2>Tiramisu</h2>
-      <p>À la noisette</p>
-      <span>23€</span>
-   </div>
- </article>
+        <h3>Desserts</h3>
+      <div>
+        <div class="link-food">
+          <div>
+              <h2>Farandole de desserts</h2>
+              <p>Du chef</p>
+              <span>18€</span>
+          </div>
+          <div><i class="fas fa-check-circle"></i>
+          </div>
+        </div>
+        <div class="link-food">
+          <div>
+              <h2>Crème brulée</h2>
+              <p>Revisitée</p>
+              <span>22€</span>
+          </div>
+          <div><i class="fas fa-check-circle"></i>
+          </div>
+        </div>
+        <div class="link-food">
+          <div>
+            <h2>Tiramisu</h2>
+            <p>À la noisette</p>
+            <span>23€</span>
+          </div>
+          <div><i class="fas fa-check-circle"></i>
+          </div>
+        </div>
+      </div>
+    </article>
+        <div class="btn">
+          <button>Commander</button>
+        </div>
     </section>
            <!-- footer -->
-    <footer>
+    <footer class="footers">
         <h1>Ohmyfood</h1>
         <ul>
             <li>
