--- a/menu1.html
+++ b/menu1.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/613a25ab47.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
              <!-- header -->
@@ -150,7 +150,7 @@
                 </div>
             </li>
             <li><a href="#">Mentions légales</a></li>
-            <li><a href="#" id="contacte">contact</a></li>
+            <li><a href="mailto:contact@ohmyfood.com" id="contacte">contact</a></li>
                 
     </ul>   
     </footer>
