spiner to index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 <body>
                <!-- header -->
@@ -51,7 +52,13 @@
             </div>
 
 </main>
-               <!-- section1 -->
+           <!-- section1 -->
+<section id="spinner">
+    <svg width="200" height="200"> 
+        <circle cx="100" cy="100" r="95" />
+    </svg>
+</section>
+               <!-- section2 -->
 <section>
     <h2 id="bolde">Restaurants</h2>
         <div class="article">   
@@ -96,7 +103,7 @@
  
             <a href="menu2.html">
             <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="cite-rouge">
-            <h3>Nouveau</h3>
+            <h3 class="sans-nouveau">Nouveau</h3>
             </a>
             <div class="bloc">
                <div class="plats">
@@ -114,7 +121,7 @@
  
             <a href="menu3.html">
             <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="sens">
-            <h3>Nouveau</h3>
+            <h3 class="sans-nouveau">Nouveau</h3>
             </a>
             <div class="bloc">
                <div class="plats">
