--- a/menu2.html
+++ b/menu2.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 <body>
              <!-- header -->
@@ -22,7 +23,7 @@
         <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="française">
     </nav>
     <section class="menu-food">
-         <h2>À la française</h2>
+         <h1>À la française</h1>
          <i class="far fa-heart"></i>
        <article>
            <h3>Entrées</h3>
