--- a/menu.html
+++ b/menu.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 <body>
              <!-- header -->
@@ -22,7 +23,7 @@
         <img src="images/restaurants/gout.jpg" alt="gout">
     </nav>
     <section class="menu-food">
-         <h2>La palette du goût</h2>
+         <h1>La palette du goût</h1>
          <i class="far fa-heart"></i>
        <article>
            <h3>Entrées</h3>
