modify the sass

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header>
         <img src="images/logo/ohmyfood@2x.svg" alt="logo">
 </header>
-                <!-- nav1 -->
+                <!-- nav1 ( la localisation des restaurant) -->
 <nav>
       <div id="menu">
         <div class="menu1">
@@ -28,7 +28,7 @@
             <button class="btn">Explorer nos restaurants</button>
       </div>
 </nav>
-               <!-- main -->      
+               <!-- main (foctionnement)-->      
 <main>
         <h1>Fonctionnement</h1>
             <div class="links">
@@ -52,7 +52,7 @@
             </div>
 
 </main>
-               <!-- section1 -->
+               <!-- section1(4 menu) -->
 <section>
     <h2 id="bolde">Restaurants</h2>
         <div class="article">   
@@ -132,7 +132,8 @@
 </section>  
   <!-- section2 -->
 <section id="spinner">
-    <svg width="200" height="200"> 
+    <h2>spiner</h2>
+     <svg width="200" height="200"> 
         <circle cx="100" cy="100" r="95" />
     </svg>
 </section>
