--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,7 @@
         <img src="images/restaurants/gout.jpg" alt="gout">
     </nav>
     <section class="menu-food">
-         <h1>La palette du goût</h1>
+         <h2 id="titre">La palette du goût</h2>
          <i class="far fa-heart"></i>
        <article>
            <h3>Entrées</h3>
