--- a/menu1.html
+++ b/menu1.html
@@ -23,7 +23,7 @@
         <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="charone">
     </nav>
     <section class="menu-food">
-         <h1>La note enchantée</h1>
+         <h2 id="titre">La note enchantée</h2>
          <i class="far fa-heart"></i>
        <article>
            <h3>Entrées</h3>
