--- a/menu2.html
+++ b/menu2.html
@@ -23,7 +23,7 @@
         <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="française">
     </nav>
     <section class="menu-food">
-         <h1>À la française</h1>
+         <h2 id="titre">À la française</h2>
          <i class="far fa-heart"></i>
        <article>
            <h3>Entrées</h3>
