--- a/menu3.html
+++ b/menu3.html
@@ -23,7 +23,7 @@
         <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="sens">
     </nav>
     <section class="menu-food">
-         <h1>Le délice des sens</h1>
+         <h2 id="titre">Le délice des sens</h2>
          <i class="far fa-heart"></i>
        <article>
            <h3>Entrées</h3>
