scole the validation

--- a/menu.html
+++ b/menu.html
@@ -34,7 +34,7 @@
                   <p>Au piment d'Espelette</p></div>
                   <div><span>25€</span></div>
               </div>
-              <div><i class="fas fa-check-circle"></i>
+              <div class="cercle"><i class="fas fa-check-circle"></i>
               </div>
           </div>
           <div class="link-food">
@@ -43,7 +43,7 @@
                 <p>Et ses copeaux de truffe noire</p></div>
                 <div><span>35€</span></div>
             </div>
-            <div><i class="fas fa-check-circle"></i>
+            <div class="cercle"><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
@@ -52,7 +52,7 @@
               <p>Assaisonné à la truffe sur lit de caviar</p></div>
               <div><span>20€</span></div>
           </div>
-          <div><i class="fas fa-check-circle"></i>
+          <div class="cercle"><i class="fas fa-check-circle"></i>
           </div>
           </div>
       </div>
@@ -66,7 +66,7 @@
               <p>Accompagné de sa ribambelle de légumes</p></div>
               <div><span>40€</span></div>
             </div>
-            <div><i class="fas fa-check-circle"></i>
+            <div class="cercle"><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
@@ -75,7 +75,7 @@
               <p>À la truffe noire sur sa purée de panais</p></div>
               <div><span>35€</span></div>
             </div>
-            <div><i class="fas fa-check-circle"></i>
+            <div class="cercle"><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
@@ -84,7 +84,7 @@
             <p>Aux agrumes</p></div>
             <div><span>44€</span></div>
             </div>
-           <div><i class="fas fa-check-circle"></i>
+           <div class="cercle"><i class="fas fa-check-circle"></i>
          </div>
         </div>
       </div>
@@ -98,7 +98,7 @@
               <p>Revisité</p></div>
               <div><span>18€</span></div>
           </div>
-          <div><i class="fas fa-check-circle"></i>
+          <div class="cercle"><i class="fas fa-check-circle"></i>
           </div>
         </div>
         <div class="link-food">
@@ -107,7 +107,7 @@
               <p>Et glace à la vanille de Madagascar</p></div>
               <div><span>22€</span></div>
           </div>
-          <div><i class="fas fa-check-circle"></i>
+          <div class="cercle"><i class="fas fa-check-circle"></i>
           </div>
         </div>
         <div class="link-food">
@@ -116,7 +116,7 @@
             <p>Au piment d'Espelette et à la truffe noire</p></div>
             <div><span>23€</span></div>
           </div>
-          <div><i class="fas fa-check-circle"></i>
+          <div class="cercle"><i class="fas fa-check-circle"></i>
           </div>
         </div>
       </div>
