--- a/menu1.html
+++ b/menu1.html
@@ -34,7 +34,7 @@
                   <p>Accompagnés de leur crème à la truffe</p></div>
                   <div><span>25€</span></div>
               </div>
-              <div><i class="fas fa-check-circle"></i>
+              <div class="cercle"><i class="fas fa-check-circle"></i>
               </div>
           </div>
           <div class="link-food">
@@ -43,7 +43,7 @@
                 <p>Sur blini à la farine de blé noir</p></div>
                 <div><span>35€</span></div>
             </div>
-            <div><i class="fas fa-check-circle"></i>
+            <div class="cercle"><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
@@ -52,7 +52,7 @@
               <p>Mariné aux zestes d'orange</p></div>
               <div><span>20€</span></div>
           </div>
-          <div><i class="fas fa-check-circle"></i>
+          <div class="cercle"><i class="fas fa-check-circle"></i>
           </div>
           </div>
           <div class="link-food">
@@ -61,7 +61,7 @@
                 <p>Confiture de figue et pain toasté</p></div>
                 <div><span>35€</span></div>
             </div>
-            <div><i class="fas fa-check-circle"></i>
+            <div class="cercle"><i class="fas fa-check-circle"></i>
             </div>
             </div>
       </div>
@@ -75,7 +75,7 @@
               <p>Sur lit de purée de céleri-rave</p></div>
               <div><span>40€</span></div>
             </div>
-            <div><i class="fas fa-check-circle"></i>
+            <div class="cercle"><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
@@ -84,7 +84,7 @@
               <p>Purée de patate douce</p></div>
               <div><span>35€</span></div>
             </div>
-            <div><i class="fas fa-check-circle"></i>
+            <div class="cercle"><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
@@ -93,7 +93,7 @@
             <p>Et riz sauvage aux zestes de citron</p></div>
             <div><span>44€</span></div>
             </div>
-           <div><i class="fas fa-check-circle"></i>
+           <div class="cercle"><i class="fas fa-check-circle"></i>
          </div>
         </div>
       </div>
@@ -107,7 +107,7 @@
               <p>Glace au caramel brun et sel de Guérande</p></div>
               <div><span>18€</span></div>
           </div>
-          <div><i class="fas fa-check-circle"></i>
+          <div class="cercle"><i class="fas fa-check-circle"></i>
           </div>
         </div>
         <div class="link-food">
@@ -116,7 +116,7 @@
               <p>Avec son coulis de citron</p></div>
               <div><span>22€</span></div>
           </div>
-          <div><i class="fas fa-check-circle"></i>
+          <div class="cercle"><i class="fas fa-check-circle"></i>
           </div>
         </div>
         <div class="link-food">
@@ -125,7 +125,7 @@
             <p>Déstructurée</p>
             <div><span>23€</span></div>
           </div>
-          <div><i class="fas fa-check-circle"></i>
+          <div class="cercle"><i class="fas fa-check-circle"></i>
           </div>
         </div>
       </div>
