--- a/menu2.html
+++ b/menu2.html
@@ -34,7 +34,7 @@
                   <p>Aux zestes d'orange</p></div>
                   <div><span>25€</span></div>
               </div>
-              <div><i class="fas fa-check-circle"></i>
+              <div class="cercle"><i class="fas fa-check-circle"></i>
               </div>
           </div>
           <div class="link-food">
@@ -43,7 +43,7 @@
                 <p>Carotte, panais, topinambour</p></div>
                 <div><span>35€</span></div>
             </div>
-            <div><i class="fas fa-check-circle"></i>
+            <div class="cercle"><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
@@ -52,7 +52,7 @@
               <p>Revisitée</p></div>
               <div><span>20€</span></div>
           </div>
-          <div><i class="fas fa-check-circle"></i>
+          <div class="cercle"><i class="fas fa-check-circle"></i>
           </div>
           </div>
       </div>
@@ -66,7 +66,7 @@
               <p>Accompagnées d'une purée de panais</p></div>
               <div><span>40€</span></div>
             </div>
-            <div><i class="fas fa-check-circle"></i>
+            <div class="cercle"><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
@@ -75,7 +75,7 @@
               <p>Et parmentier de pommes de terre</p></div>
               <div><span>35€</span></div>
             </div>
-            <div><i class="fas fa-check-circle"></i>
+            <div class="cercle"><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
@@ -84,7 +84,7 @@
             <p>Sur son lit de gnocchis aux légumes</p></div>
             <div><span>44€</span></div>
             </div>
-           <div><i class="fas fa-check-circle"></i>
+           <div class="cercle"><i class="fas fa-check-circle"></i>
          </div>
         </div>
       </div>
@@ -98,7 +98,7 @@
               <p>Et purée de noisettes</p></div>
               <div><span>18€</span></div>
           </div>
-          <div><i class="fas fa-check-circle"></i>
+          <div class="cercle"><i class="fas fa-check-circle"></i>
           </div>
         </div>
         <div class="link-food">
@@ -107,7 +107,7 @@
               <p>Revisité</p></div>
               <div><span>22€</span></div>
           </div>
-          <div><i class="fas fa-check-circle"></i>
+          <div class="cercle"><i class="fas fa-check-circle"></i>
           </div>
         </div>
         <div class="link-food">
@@ -116,7 +116,7 @@
             <p>Myrtilles et pâte d’amande</p></div>
             <div><span>23€</span></div>
           </div>
-          <div><i class="fas fa-check-circle"></i>
+          <div class="cercle"><i class="fas fa-check-circle"></i>
           </div>
         </div>
       </div>
